# Otter

./: .gitignore  LICENSE  Otter.opam  README.md  dune  dune-project  otter.opam  out.ml  tring - unit - unit  unit
lib/: block.ml  block.mli  comment.ml  comment.mli  dune  function.ml  function.mli  infraction.ml  infraction.mli  otter.ml  otter_lib.ml  otter_lib.mli  raft.ml  raft.mli  unknown.ml  unknown.mli  variable.ml  variable.mli
sample_files/: a.ml  aout.ml
src/: dune  otter.mli  otter_lib.mli
test/: dune
tests/: dune  tests.ml
