(rule
 (target otter.zip)
 (deps
  lib/dune
  lib/raft.mli
  lib/raft.ml
  lib/comment.mli
  lib/comment.ml
  lib/unknown.mli
  lib/unknown.ml
  lib/otter.ml
  lib/infraction.mli
  lib/infraction.ml
  lib/function.ml
  lib/function.mli
  lib/variable.mli
  lib/variable.ml
  tests/tests.ml
  tests/dune)
 (action
  (run zip -R otter.zip %{deps})))
