(library
 (name otter_lib)
 (modules raft infraction function comment variable block unknown)
 (libraries core yojson str)
 (preprocess
  (pps bisect_ppx ppx_deriving_yojson)))

(executable
 (name Otter)
 (modules otter)
 (libraries core core_unix.command_unix yojson)
 (preprocess
  (pps ppx_let ppx_deriving_yojson)))
